--- a/blog/templates/nav_bar.html
+++ b/blog/templates/nav_bar.html
@@ -7,12 +7,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('user.user_list') }}">Users</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('article.article_list') }}">Articles</a>
-                </li>
+                {% for (endpoint, label) in [('user.list', 'Users'), ('article.list', 'Articles')] %}
+                    <a href="{{ url_for(endpoint) }}"
+                       class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">{{ label }}</a>
+                {% endfor %}
+
+                {#                <li class="nav-item">#}
+                {#                    <a class="nav-link" href="{{ url_for('user.list') }}">Users</a>#}
+                {#                </li>#}
+                {#                <li class="nav-item">#}
+                {#                    <a class="nav-link" href="{{ url_for('article.article_list') }}">Articles</a>#}
+                {#                </li>#}
             </ul>
         </div>
     </div>
