--- a/blog/templates/users/details.html
+++ b/blog/templates/users/details.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Users detail
+    Users detail # {{ pk }}
 {% endblock %}
 
 {% block body %}
     <h1>{{ user_name }}</h1>
+    <div>
+        <a href="{{ url_for('user.list') }}">Back to users list</a>
+    </div>
 {% endblock %}
