--- a/blog/templates/users/list.html
+++ b/blog/templates/users/list.html
@@ -10,7 +10,7 @@
             <h1>Users:</h1>
             {% for user_id in users %}
                 <ul>
-                    <li><a href="{{ url_for('user.get_user', pk=user_id) }}">{{ users[user_id] }}</a></li>
+                    <li><a href="{{ url_for('user.details', pk=user_id) }}">{{ users[user_id] }}</a></li>
                 </ul>
             {% endfor %}
         </div>
