--- a/blog/templates/nav_bar.html
+++ b/blog/templates/nav_bar.html
@@ -12,12 +12,12 @@
                        class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">{{ label }}</a>
                 {% endfor %}
 
-                {#                <li class="nav-item">#}
-                {#                    <a class="nav-link" href="{{ url_for('user.list') }}">Users</a>#}
-                {#                </li>#}
-                {#                <li class="nav-item">#}
-                {#                    <a class="nav-link" href="{{ url_for('article.article_list') }}">Articles</a>#}
-                {#                </li>#}
+                {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout ({{ current_user.email }})</a>
+                    </li>
+                {% endif %}
+
             </ul>
         </div>
     </div>
