--- a/blog/templates/users/list.html
+++ b/blog/templates/users/list.html
@@ -8,9 +8,9 @@
     <div class="row">
         <div class="col">
             <h1>Users:</h1>
-            {% for user_id in users %}
+            {% for user in users %}
                 <ul>
-                    <li><a href="{{ url_for('user.details', pk=user_id) }}">{{ users[user_id] }}</a></li>
+                    <li><a href="{{ url_for('user.profile', pk=user.id) }}">{{ user.email }}</a></li>
                 </ul>
             {% endfor %}
         </div>
