--- a/blog/templates/auth/login.html
+++ b/blog/templates/auth/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from "macro/formhelpers.html" import render_field %}
 
 {% block title %}
     Login page
@@ -16,21 +17,13 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <form class="row g-3 mt-3" method="post" action="{{ url_for('auth.login_post') }}">
-                <div class="mb-3 row">
-                    <label for="email" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-3">
-                        <input type="text" class="form-control" id="email" name="email">
-                    </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="password" class="col-sm-2 col-form-label">Password</label>
-                    <div class="col-sm-3">
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-3">Login</button>
+            <form class="row g-3 mt-3" method="POST" action="{{ url_for('auth.login_post') }}">
+                {{ form.csrf_token }}
+                {% for field in ['email', 'password'] %}
+                    {{ render_field(form[field]) }}
+                {% endfor %}
+                <div>
+                    {{ form.submit(class="btn btn-primary mb-3") }}
                 </div>
             </form>
         </div>
