--- a/blog/templates/articles/details.html
+++ b/blog/templates/articles/details.html
@@ -1,16 +1,26 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    {{ art_name }}
+    {{ article.title }}
 {% endblock %}
 
 {% block body %}
-    <div>
-        <h1>{{ art_name }}</h1>
-        <p>{{ art_text }}</p>
-        <h4>Author: {{ art_author }}</h4>
+    <div class="row">
+        <h1>{{ article.title }}</h1>
     </div>
-    <div>
-        <a href="{{ url_for('article.list') }}">Back to articles list</a>
+    <div class="row">
+        <div class="col-md-12">{{ article.text }}</div>
+    </div>
+
+    <div class="row">
+        <div class="col-6">
+            <div><small
+                    class="text-muted">Author: {{ article.author.user.first_name }} {{ article.author.user.last_name }}</small>
+            </div>
+            <div><small class="text-muted">Created at: {{ article.created_at.strftime('%d-%m-%Y %H:%M:%S') }}</small>
+            </div>
+            <div><small class="text-muted">Updated at: {{ article.updated_at.strftime('%d-%m-%Y %H:%M:%S') }}</small>
+            </div>
+        </div>
     </div>
 {% endblock %}
