--- a/blog/templates/nav_bar.html
+++ b/blog/templates/nav_bar.html
@@ -7,7 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                {% for (endpoint, label) in [('user.list', 'Users'), ('article.list', 'Articles')] %}
+                {% for (endpoint, label) in [('user.list', 'Users'), ('article.list', 'Articles'), ('author.list', 'Authors')] %}
                     <a href="{{ url_for(endpoint) }}"
                        class="nav-link {% if request.endpoint == endpoint -%}active{%- endif %}">{{ label }}</a>
                 {% endfor %}
