--- a/blog/templates/articles/list.html
+++ b/blog/templates/articles/list.html
@@ -6,15 +6,24 @@
 
 {% block body %}
     <div class="row">
-        <div class="col">
-            <h1>Articles:</h1>
-            {% for i in articles %}
-                <ul>
-                    <li><a href="{{ url_for('article.details', pk=i) }}">{{ articles[i]['title'] }}</a></li>
-                </ul>
-            {% endfor %}
-        </div>
+        <h1>Articles:</h1>
     </div>
-
-
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+        {% for article in articles %}
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ article.title }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ article.author.user.first_name }} {{ article.author.user.last_name }}</h6>
+                        <p class="card-text">{{ article.text | truncate(50) }}</p>
+                        <a href="{{ url_for('article.article_detail', article_id=article.id) }}"
+                           class="card-link">Read</a>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Created at: {{ article.created_at.strftime('%d-%m-%Y %H:%M:%S') }}</small>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
