--- a/blog/templates/nav_bar.html
+++ b/blog/templates/nav_bar.html
@@ -14,10 +14,16 @@
 
                 {% if current_user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('article.create_article_form') }}">Create article</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout ({{ current_user.email }})</a>
                     </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+                    </li>
                 {% endif %}
-
             </ul>
         </div>
     </div>
